--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -16,7 +16,7 @@
   <div class="container">
       <div class="grid grid--2">
           <div class="about__img-wrapper">
-              <img src="img/placeholder.png" alt="AI Workspace" class="about__img">
+              <img src="/img/one.jpg" alt="AI Workspace" class="about__img">
           </div>
           <div class="about__text">
               <h2 class="section-title">Переосмыслите подход к развитию</h2>
