--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,10 +13,10 @@
           <div class="footer__col">
               <h4 class="footer__title">Навигация</h4>
               <ul class="footer__links">
-                  <li><a href="#hero">Главная</a></li>
-                  <li><a href="#practices">Практики</a></li>
-                  <li><a href="#innovation">Инновации</a></li>
-                  <li><a href="#blog">Блог</a></li>
+                  <li><a href="./#hero">Главная</a></li>
+                  <li><a href="./#practices">Практики</a></li>
+                  <li><a href="./#innovation">Инновации</a></li>
+                  <li><a href="./#blog">Блог</a></li>
               </ul>
           </div>
 
@@ -41,12 +41,12 @@
 
       <div class="footer__bottom">
           <div class="footer__legal">
-              <a href="privacy.html">Privacy Policy</a>
-              <a href="cookies.html">Cookies</a>
-              <a href="terms.html">Terms of Service</a>
-              <a href="return.html">Return Policy</a>
-              <a href="disclaimer.html">Disclaimer</a>
-              <a href="personal-data-policy.html">Data Policy</a>
+              <a href="./privacy.html">Privacy Policy</a>
+              <a href="./cookies.html">Cookies</a>
+              <a href="./terms.html">Terms of Service</a>
+              <a href="./return.html">Return Policy</a>
+              <a href="./disclaimer.html">Disclaimer</a>
+              <a href="./personal-data-policy.html">Data Policy</a>
           </div>
           <p class="footer__copy">© 2026 Velaro-Tix. Платформа года. Предложение активно в странах ЕС.</p>
       </div>
