--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="container header__container">
-        <a href="/" class="logo">
+        <a href="./#hero" class="logo">
             <span class="logo__brand">Velaro-Tix</span>
             <span class="logo__tagline">Daily AI Insights</span>
         </a>
@@ -8,18 +8,18 @@
         <nav class="nav">
             <div class="nav__overlay"></div>
             <ul class="nav__list">
-                <li><a href="#hero" class="nav__link">Главная</a></li>
-                <li><a href="#about" class="nav__link">О платформе</a></li>
-                <li><a href="#practices" class="nav__link">Практики</a></li>
-                <li><a href="#innovation" class="nav__link">Инновации</a></li>
-                <li><a href="#education" class="nav__link">Обучение</a></li>
-                <li><a href="#blog" class="nav__link">Блог</a></li>
-                <li><a href="#contact" class="nav__link nav__link--cta">Начать сейчас</a></li>
+                <li><a href="./#hero" class="nav__link">Главная</a></li>
+                <li><a href="./#about" class="nav__link">О платформе</a></li>
+                <li><a href="./#practices" class="nav__link">Практики</a></li>
+                <li><a href="./#innovation" class="nav__link">Инновации</a></li>
+                <li><a href="./#education" class="nav__link">Обучение</a></li>
+                <li><a href="./#blog" class="nav__link">Блог</a></li>
+                <li><a href="./#contact" class="nav__link nav__link--cta">Начать сейчас</a></li>
             </ul>
         </nav>
 
         <div class="header__actions">
-            <a href="#contact" class="btn btn--primary header__cta">Начать</a>
+            <a href="./#contact" class="btn btn--primary header__cta">Начать</a>
 
             <button class="burger" aria-label="Открыть меню">
                 <span class="burger__line"></span>
